addons/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2048
spec:
  replicas: 1
  selector:
    matchLabels:
      name: app-2048
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: app-2048
    spec:
      containers:
      - name: app-2048
        image: alexwhen/docker-2048
        ports:
        - containerPort: 80
        #image: ianisharpratama/react-i2p:v1
        imagePullPolicy: Always
