addons/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ssl-redirect: "true"
  name: reak-ingress
  namespace: ian
  resourceVersion: "38425"
  selfLink: /apis/extensions/v1beta1/namespaces/ian/ingresses/reak-ingress
  uid: adc8cc67-3b49-4126-9df9-fa8f8f25d6e9
spec:
  rules:
  - host: ian18ishar.sumpahpalapa.com
    http:
      paths:
      - backend:
          serviceName: app-2048-service
          servicePort: 80
        path: /
  tls:
  - secretName: sumpahpalapa-certs
