addons/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2048-service
  namespace: ian
spec:
  clusterIP: 172.17.71.180
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30921
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: app-2048
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
